website/websites/u64q/code/meteor.4.scala.log

Sat, 19 Jun 2010 02:40:55 GMT

MAKE:
mv meteor.scala-4.scala meteor.scala
/usr/local/src/scala-2.8.0.RC6/bin/scalac meteor.scala
meteor.scala:39: error: value capacity is not a member of scala.collection.mutable.BitSet
   { unplaced ++= Iterator.range(0,unplaced.capacity) }
                                            ^
meteor.scala:167: error: type mismatch;
 found   : Array[Array[Array[Array[Null]]]]
 required: Array[Array[Array[Array[Array[BoardCell]]]]]
      for (val i <- Array.range(0,Board.pieces)) 
                 ^
two errors found
make: [meteor.scala-4.scala_run] Error 1 (ignored)
5.05s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.RC6/lib/scala-library.jar meteor 2098

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: meteor
Caused by: java.lang.ClassNotFoundException: meteor
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: meteor.  Program will exit.
